# perception

components/artComp/: CMakeLists.txt  DoxyFile  artComp.cdsl  artComp.kdev4  artcomp.kdevelop
components/artComp/src/: Art.h  CMakeLists.txt  Camera.h  CommonBehavior.h  CommonHead.h  DifferentialRobot.h  JointMotor.h  artI.cpp  artI.h  artcomp.cpp  cmake_install.cmake  config.h  genericmonitor.cpp  genericmonitor.h  genericworker.cpp  genericworker.h  specificmonitor.cpp  specificworker.cpp  specificworker.h  ui_guiDlg.h
components/fitterTestComp/: fittertestcomp.kdevelop
components/objectDetection/: CMakeLists.txt  DoxyFile  objectDetection.cdsl  objectdetectioncomp.kdevelop
components/objectDetection/src/tabletop_symmetry/: CMakeLists.txt  mindGapper.cpp  mindGapper.h  mirror.cpp  mirror.h
components/objectDetection/src/tabletop_symmetry/dt/: CMakeLists.txt  dt.cpp  image.h
components/objectDetectionRockin2/: CMakeLists.txt  DoxyFile  README.md  objectDetectionRockin2.cdsl
components/objectDetectionStatic/: CMakeLists.txt  DoxyFile  objectDetectionStatic.cdsl  objectdetectionstaticcomp.kdevelop
components/objectDetectionTester/: CMakeLists.txt  DoxyFile  objectDetectionTester.cdsl
components/objectDetectionTesterRockin/: CMakeLists.txt  objectdetectiontestercomp.kdevelop
components/objectOracle/: CMakeLists.txt  DoxyFile  README.md  objectOracle.cdsl
components/testOracle/: CMakeLists.txt  DoxyFile  README.md  testOracle.cdsl
etc/: april_rcis.conf  aprilcomp_rcis.conf  genericPointCloud.xml  objectDetection.conf  objectDetectionTester.conf  primesense.conf  startRCIS.sh  startTabletop.sh  startTabletopVirtual.sh  ursusCog.xml  ursusMM.xml  virtualTableTop.xml
objectDetectorAgentComp/: CMakeLists.txt  DoxyFile  objectDetectorAgent.cdsl  objectDetectorAgentComp.kdev4  objectdetectoragentcomp.kdevelop
objectDetectorAgentComp/etc/: generic_config  (+1 more)
(+165 files in other folders)
